Added workouts and workoutLogs collections
