# routes/index.js
@@ -3,6 +3,8 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/exercises', require('./exercises'));
-router.use('/users', require('./users')); // Assuming you created the users route
+router.use('/users', require('./users'));
+router.use('/workouts', require('./workouts'));
+router.use('/workoutLogs', require('./workoutLogs'));
 
 module.exports = router;
